--- a/src/components/ProjectsAndInitiatives/projects-initiatives.scss
+++ b/src/components/ProjectsAndInitiatives/projects-initiatives.scss
@@ -4,7 +4,8 @@
   background: $light-grey-205;
   padding: 5rem $large-space-size;
 
-  h2, h4 {
+  h2,
+  h4 {
     margin: 0;
     padding: 0;
   }
@@ -23,6 +24,7 @@
   }
 
   .projects-initiative-content {
+    break-inside: avoid;
     margin-top: 1.875rem;
     border: 1px solid $philippine-silver;
     border-radius: 6px;
